--- a/src/main/resources/assets/utopia/lang/zh_cn.json
+++ b/src/main/resources/assets/utopia/lang/zh_cn.json
@@ -1,4 +1,6 @@
 {
   "item.utopia.dragon_sword": "龙剑",
-  "item.utopia.dragon_food": "龙食"
+  "item.utopia.dragon_food": "龙食",
+  "block.utopia.dragon_block": "龙砖",
+  "item.utopia.coffee": "咖啡"
 }
